<resources>
    <string name="app_name">dakusuno gua</string>
    <string name="search">Search Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repositories">Repository</string>
    <string name="usrnotfound">Username Not Found</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>
    <string name="reminder">Reminder</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="active">active</string>
    <string name="nonactive">Non Active</string>
    <string name="notif">Open Your Apps</string>
    <string name="unknown">No Data</string>
</resources>