<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_main"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.dakusuno.dakusunogua.view.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main"
        >
        <action
            android:id="@+id/action_mainFragment_to_userFragment"
            app:destination="@id/userFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit">
        </action>

    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.dakusuno.dakusunogua.view.ui.user.UserFragment"
        tools:layout="@layout/fragment_main"
        >
        <action
            android:id="@+id/action_userFragment_self"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:destination="@id/userFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.dakusuno.dakusunogua.view.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite"
        >
        <action
            android:id="@+id/action_favouriteFragment_to_userFragment"
            app:destination="@id/userFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"/>
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.dakusuno.dakusunogua.view.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting"
        />

</navigation>